--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800|Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body id="about">
 <header>
     <div class="header-block">
         <div class="header-top">
