--- a/autumn-winter.html
+++ b/autumn-winter.html
@@ -19,7 +19,7 @@
 
 
 </head>
-<body id="black-edition">
+<body id="autumn-winter-collection">
 <header>
     <div class="header-block">
         <div class="header-top">
@@ -83,54 +83,26 @@
 <main>
     <section id="collection-сlothes">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="box">
-                        <a href="black-edition.html">
-                            <img src="images/hero_copia.jpg" alt="">
-                        </a>
-                        <h2 class="title">
-                            BLACK EDITION: БЛАГОРОДСТВО ЧЕРНОГО
-                        </h2>
-                        <p class="subtitle">
-                            Капсульная коллекция Black Edition от Avenue – это сочетание плавных силуэтов,
-                            функциональных деталей и безграничного воображения. Линейка современной спортивной одежды – это новое направление стиля, где во главу угла возведено удобство. В капсульной коллекции представлены некоторые предметы одежды, являющиеся обязательными элементами стиля «городской шик», которые идеально вписываются в образ жизни молодого и энергичного мужчины, настоящего гражданина мира. В коллекции преобладают черно-серые оттенки, соответствующие минималистичной цветовой палитре нового городского костюма. В то же время в одежде было использовано творческое решение нового стилистического направления – надпись Avenue
-                            в виде буквенных узоров и в форме рельефного жаккардового плетения.
-                        </p>
-                    </div>
-                </div>
+            <div class="box">
+                <a href="collections.html">
+                    <img src="images/1-Looks-Hero.jpg" alt="">
+                </a>
+                <h2 class="title">
+                    ОСЕНЬ–ЗИМА 2020
+                </h2>
+                <p class="subtitle">
+                    Ценности, ставшие символами нашего бренда – а именно, мастерство
+                    в области пошива, инновации и внимание к деталям – легли в основу новой
+                    архитектурной конструкции коллекции. Она состоит из трех отдельных, и в тоже время
+                    дополняющих друг друга элементов: Black Edition, Exclusive и Canali 1934. Каждый сегмент
+                    включает в себя ассортимент изделий в деловом стиле, спортивную одежду и аксессуары, что позволит
+                    вам создать индивидуальный стиль для любого события вашей жизни.
+                </p>
             </div>
         </div>
     </section>
-    <section id="black">
+    <section id="autumn-winter">
         <div class="container">
-            <div class="row mt-80 mb-80">
-                <div class="col-md-6">
-                    <img src="images/look_02.jpg" alt="">
-                </div>
-                <div class="col-md-6 d-flex align-items-center justify-content-center">
-                    <div class="box">
-                        <h2 class="title">
-                            ГОРОДСКОЙ СТИЛЬ ЖИЗНИ
-                        </h2>
-                        <p class="subtitle">
-                            Капсульная коллекция Black Edition от Avenue – это сочетание плавных силуэтов, функциональных
-                            деталей и безграничного воображения. Линейка современной спортивной одежды – это новое
-                            направление стиля, где во главу угла возведено удобство. В капсульной коллекции представлены
-                            некоторые предметы одежды, являющиеся обязательными элементами стиля «городской шик»,
-                            которые идеально вписываются в образ жизни молодого и энергичного мужчины, настоящего
-                            гражданина мира. В коллекции преобладают черно-серые оттенки, соответствующие минималистичной
-                            цветовой палитре нового городского костюма. В то же время в одежде было использовано творческое
-                            решение нового стилистического направления –
-                            надпись Avenue в виде буквенных узоров и в форме рельефного жаккардового плетения.
-                        </p>
-                            <a class="look" href="#">
-                                Купить Сейчас
-                            </a>
-
-                    </div>
-                </div>
-            </div>
             <h2 class="row-title text-center mt-40 mb-30">BLACK EDITION</h2>
             <div class="row">
                 <div class="col-md-3">
@@ -254,64 +226,252 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-100">
-                <div class="col-md-4">
-                    <div class="box">
-                        <a href="#">
-                            <img src="images/zaino_new.jpg" alt="">
-                        </a>
-                        <h2 class="title">
-                            УНИВЕРСАЛЬНОСТЬ
-                        </h2>
-                        <p class="subtitle">
-                            Компактные и в тоже время вместительные сумки и рюкзаки
-                            Black Edition имеют структурированную форму,
-                            что делает их очень функциональными и удобными при использовании в городских условиях.
-                        </p>
-                            <a class="look" href="#">
-                                КУПИТЬ СЕЙЧАС
-                            </a>
-
+            <h2 class="row-title text-center mt-40 mb-30">EXCLUSIVE</h2>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_16.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_17.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_18.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_19.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_20.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_21.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_22.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_23.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_24.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_25.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_26.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_27.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_28.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_29.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_30.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
                 </div>
             </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <a href="#">
-                            <img src="images/SCARPE.jpg" alt="">
-                        </a>
-                        <h2 class="title">
-                            ДВИЖЕНИЕ
-                        </h2>
-                        <p class="subtitle">
-                            Черно-серые кроссовки с надписью Avenue –
-                            это эклектичное сочетание технологичной ткани,
-                            телячьей кожи и натурального хлопка.
-                        </p>
-                            <a class="look" href="#">
-                                ЧИТАТЬ ДАЛЕЕ
-                            </a>
+            <h2 class="row-title text-center mt-40 mb-30">CANALI 1934</h2>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_31.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <a href="#">
-                            <img src="images/CINTURA.jpg" alt="">
-                        </a>
-                        <h2 class="title">
-                            УНИКАЛЬНОСТЬ
-                        </h2>
-                        <p class="subtitle">
-                            Взглянув на серебряную пряжку в форме буквы «C»
-                            на ремне Avenue и замысловатый
-                            буквенный узор, можно понять, что его владельцу присуще врожденное чувство стиля.
-                        </p>
-                            <a class="look" href="#">
-                                ПОДРОБНЕЕ
-                            </a>
-
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_32.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
                     </div>
                 </div>
-        </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_33.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_34.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_35.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_36.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_37.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_38.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_39.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_40.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_41.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_42.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_43.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_44.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="item">
+                        <img src="images/look_small_45.jpg" alt="">
+                        <div class="btn-view">
+                            Подробнее
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section id="info">
