--- a/mens.html
+++ b/mens.html
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="box">
-                        <a href="black-edition.html">
+                        <a href="autumn-winter.html">
                             <img src="images/1-Looks-Hero.jpg" alt="">
                         </a>
                         <h2 class="title" >
@@ -150,16 +150,16 @@
                         в сочетании классических элементов мужского костюма
                         с тенденциями стиля кэжуал, которые отражаются в способе шитья, выборе материалов, фасонов и узоров.
                     </p>
-                     <div class="look">
-                    <a href="black-edition.html">
+
+                    <a class="look" href="autumn-winter.html">
                         Показать еще
                     </a>
-                     </div>
+
                     </div>
                 </div>
                 <div class="col-lg-12">
                     <div class="box mt-50">
-                        <a href="collections.html">
+                        <a href="spring-summer.html">
                             <img src="images/2Hero.jpg" alt="">
                         </a>
                         <h2 class="title">
@@ -171,16 +171,15 @@
                             Пейзажи, мелодии песен и воспоминания об ароматах – все это пронизывает разум атмосферой безмятежности и расслабленности,
                             которая ненавязчиво сглаживает различия между строгой и спортивной одеждой.
                         </p>
-                        <div class="look">
-                            <a href="collections.html">
+                            <a class="look" href="spring-summer.html">
                                 Показать еще
                             </a>
-                        </div>
+
                     </div>
                 </div>
                 <div class="col-lg-12">
                     <div class="box mt-50">
-                        <a href="collections.html">
+                        <a href="black-edition.html">
                             <img src="images/hero_copia.jpg" alt="">
                         </a>
                         <h2 class="title">
@@ -191,11 +190,9 @@
                             функциональных деталей и безграничного воображения. Линейка современной спортивной одежды – это новое направление стиля, где во главу угла возведено удобство. В капсульной коллекции представлены некоторые предметы одежды, являющиеся обязательными элементами стиля «городской шик», которые идеально вписываются в образ жизни молодого и энергичного мужчины, настоящего гражданина мира. В коллекции преобладают черно-серые оттенки, соответствующие минималистичной цветовой палитре нового городского костюма. В то же время в одежде было использовано творческое решение нового стилистического направления – надпись Avenue
                             в виде буквенных узоров и в форме рельефного жаккардового плетения.
                         </p>
-                        <div class="look">
-                            <a href="collections.html">
+                            <a class="look" href="black-edition.html">
                                 Показать еще
                             </a>
-                        </div>
                     </div>
                 </div>
             </div>
